Add vm argument to README for JavaFX access