@@ -1,1 +1,2 @@
 gnote gnote
+vm argument pour eviter une erreur : --enable-native-access=javafx.graphics
